working on creating room

--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -19,6 +19,6 @@
     "skipLibCheck": true,
     "noEmit": true
   },
-  "include": ["./**/*"],
+  "include": ["./**/*", "../store"],
   "exclude": ["./_generated"]
 }
