--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.5",
+    "@liveblocks/client": "^2.0.3",
+    "@liveblocks/react": "^2.0.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -18,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.12.1",
+    "convex-helpers": "^0.1.42",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
